# ShimonStrikerController

./: CMakeCache.txt  CMakeLists.txt  DS.h  Globals.h  Makefile  NotePosition.cpp  NotePosition.h  OSC-test  OSC-test.cbp  OSCReceiver.cpp  OSCReceiver.h  Project.cbp  README.md  ShimonStrikerC.cbp  ShimonStrikerController  ShimonStrikerController.cbp  Striker.cpp  Striker.h  StrikerController.cpp  StrikerController.h  cmake_install.cmake  main.cpp
